--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "@google-cloud/vision": "^4.3.2",
     "@supabase/supabase-js": "^2.46.1",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1"
   }
 }
