--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
     "@supabase/supabase-js": "^2.46.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "firebase-admin": "^12.7.0",
     "multer": "^1.4.5-lts.1",
     "pdf-parse": "^1.1.1"
   }
