--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "express": "^4.21.1",
     "firebase-admin": "^12.7.0",
     "multer": "^1.4.5-lts.1",
+    "openai": "^4.71.1",
     "pdf-parse": "^1.1.1"
   }
 }
